--- a/templates/complaints-confirm.html
+++ b/templates/complaints-confirm.html
@@ -2,7 +2,7 @@
 {{template "partials/flash" .}}
 <h1>Confirm</h1>
 <div class="col-8">
-	<p>Please confirm your ticket below, as this is what we will see.</p>
+	<p>Please confirm the details below, as this is what we will see.</p>
 
   <p><b>To</b>: {{range .Recipients}}<span class="badge">{{.}}</span> {{end}}
   <p><b>Category</b>: <span class="badge">{{.Category}}</span></p>
