--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -16,7 +16,7 @@
 				<h3 class="noBottomMargin">Category</h3>
 			</label>
       <select class="form-item" name="category" id="category">
-        <option value="general">General</option>
+        <option value="General">General</option>
         {{range .Courses}}
         <option value="{{.Code}}">{{.Name}} ({{.Code}})</option>
         {{end}}
