--- a/templates/new-ticket.html
+++ b/templates/new-ticket.html
@@ -2,7 +2,7 @@
 	{{template "partials/flash" .}}
   <h1>{{if .edit}}Edit a Ticket{{else}}Post a New Ticket{{end}}</h1>
 	<form method="post">
-		<div class="col-10">
+		<div class="col-7">
 			<div class="form-group">
 				<label for="title"><h3>Title</h3></label>
 				<input class="form-item" type="text" id="title" name="title" required="1"
@@ -12,8 +12,8 @@
 				<label for="category">
 					<h3 class="noBottomMargin">Category</h3>
 				</label>
-				<select class="form-item" name="category" id="category">
-					<option value="general">General</option>
+				<select class="form-item" name="category" id="category" aria-placeholder="Hello">
+					<option value="General">General</option>
 					{{range .Courses}}
 					<option value="{{.Code}}">{{.Name}} ({{.Code}})</option>
 					{{end}}
@@ -21,7 +21,7 @@
 			</div>
 			<div class="form-group">
 				<label for="text"><h3>Body</h3></label>
-				<textarea class="form-item" id="text" name="text" cols="70" rows="20" required="1" placeholder="Markdown and HTML are supported">{{if .ptext}}{{.ptext}}{{end}}</textarea> 
+				<textarea class="form-item" id="text" name="text" rows="12" required="1" placeholder="Markdown and HTML are supported">{{if .ptext}}{{.ptext}}{{end}}</textarea> 
 			</div>
 		</div>
 		<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
