Changed buttons back to white on dark theme

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -532,7 +532,7 @@ label {
   .btn {
     background-color: var(--main-bg);
     border: solid 1px #666;
-    color: var(--accent-colour);
+    color: #fefefe;
   }
 
   .btn:hover {
