Added fourth year lecturers and courses in alphabetical order

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -12,6 +12,11 @@
 		{{end}}
 	</div>
 	{{end}}
+
+	<div class="card alert-yellow">
+    <h3 class="noTopMargin">Note</h3>
+    <p>The information on this page may be out of date or incorrect.</p>
+  </div>
 </div>
 
 {{template "base/footer" .}}
