--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,14 @@
   --danger-btn: #fc4e51;
 }
 
+@font-face {
+  font-family: 'Inter-Regular';
+  src: url('/fonts/Inter-Regular.eot?#iefix') format('embedded-opentype'),  url('/fonts/Inter-Regular.woff') format('woff'), url('/fonts/Inter-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* Page style */
 html {
   overflow-y: scroll;
@@ -48,7 +56,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", "Segoe UI", sans-serif;
+  font-family: "Inter-Regular", "Roboto", sans-serif;
   font-size: 1.2em;
   background-color: var(--main-bg);
   color: var(--main-text);
@@ -220,6 +228,12 @@ img {
 .tickets-grid-container {
   display: grid;
   grid-template-columns: 50px 1fr;
+  grid-gap: 15px;
+}
+
+.announcements-grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
   grid-gap: 15px;
 }
 
