--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -1,21 +1,20 @@
-{{template "base/head" .}}
-{{template "partials/flash" .}}
+{{template "base/head" .}} {{template "partials/flash" .}}
 <div>
-	<h1>Announcements</h1>
-  {{if .IsAdmin}}<a href="/a/new" class="btn" id="newTicket">New Announcement</a>{{end}}
+  <h1>Announcements</h1>
+  {{if .IsAdmin}}<a href="/a/new" class="btn" id="newTicket">New Announcement</a
+  >{{end}}
 </div>
 {{range .Announcements}}
 <a class="card ticketCard" href="/a/{{.AnnouncementID}}">
-	<div class="tickets-grid-container">
-		<div class="grid-child">
+  <div class="announcements-grid-container">
+    <div class="grid-child">
 			<div class="ticket-title">
-				{{.Title}}
-			</div>
-			<div class="meta">
-				{{.Tags}} &middot; {{CalcDurationShort .CreatedUnix}} ago
-			</div>
-		</div>
-	</div>
+        {{.Title}}
+      </div>
+      <div class="meta">
+        {{.Tags}} &middot; {{Date .CreatedUnix}} &middot; {{CalcDurationShort .CreatedUnix}} ago
+      </div>
+    </div>
+  </div>
 </a>
-{{end}}
-{{template "base/footer" .}}
+{{end}} {{template "base/footer" .}}
