--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -9,6 +9,9 @@
   {{if .LoggedIn}}<span><a href="/config">Configure</a></span> &middot; <span>You are logged in as {{.User.Name}}. <a href="/logout">Logout?</a></span>{{end}}
   <span> &middot; <a href="/privacy">Privacy</a></span>
   <p>This website is not affiliated with Heriot-Watt University.</p>
+  <p><a rel="noopener noreferrer"
+        href="https://github.com/hw-cs-reps/platform">{{.SiteTitle}}</a> is
+      released under AGPL 3.0.</p></p>
 </div>
 </div>
 </body>
