--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -25,8 +25,8 @@
 			<div class="nav-left">
 				<a href="/" class="nav-title">
 					<span class="nav-extra {{if .IsHome}}active{{end}}">{{.SiteTitle}}{{if .DevMode}} [DEV]{{end}}</span></a>
+					<a class="{{if .IsAnnouncements}}active{{end}}" href="/a">Announcements</a>
 				<a class="{{if .IsTickets}}active{{end}}" href="/tickets">Tickets</a>
-				<a class="{{if .IsComplaints}}active{{end}}" href="/complaints">Complaints</a>
 			</div>
 		</div>
 		<div class="content">
