Changed icon background colour to black

--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -10,9 +10,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" href="/css/normalize-8.0.1.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
-	<link rel="shortcut icon" href="/portal.png" />
-	<link rel="icon" sizes="500x500" href="/portal.png">
-	<link rel="apple-touch-icon" href="/portal.png" />
+	<link rel="shortcut icon" href="/platform.png" />
+	<link rel="icon" sizes="500x500" href="/platform.png">
+	<link rel="apple-touch-icon" href="/platform.png" />
 	<title>{{.Title}}</title>
 	{{if .Description}}
 	<meta name="description" content="{{.Description}}" />{{end}}
