--- a/templates/ticket_card.html
+++ b/templates/ticket_card.html
@@ -10,7 +10,7 @@
 				{{.Title}}
 			</div>
 			<div class="meta">
-				{{.Category}} &middot; {{CalcDurationShort .CreatedUnix}} ago &middot; {{.CommentsCount}}
+				<span class="tag">{{.Category}}</span> &middot; {{CalcDurationShort .CreatedUnix}} ago &middot; {{.CommentsCount}}
 				comments
 			</div>
 		</div>
